sas-core/main/default/objects/Blocklist__c/Blocklist__c.object-meta.xml
<CustomObject>
    <label>Blocklist</label>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>Blocklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>