sas-core/main/default/objects/Blocklist__c/fields/Messaging_User__c.field-meta.xml
<CustomField>
    <fullName>Messaging_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging User</label>
    <referenceTo>MessagingEndUser</referenceTo>
    <relationshipLabel>Blocklists</relationshipLabel>
    <relationshipName>Blocklists</relationshipName>
    <type>Lookup</type>
</CustomField>