sas-core/main/default/objects/Blocklist__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number</label>
    <type>Phone</type>
</CustomField>